# sonos-sdk

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  REFINEMENT_PLAN.md  SONOS_SDK_PLAN.md  TUI_DATA_CATALOG.md  VOLUME_TRACKING.md  release-plz.toml
callback-server/: Cargo.toml  README.md
callback-server/src/: firewall_detection.rs  lib.rs  plugin.rs  router.rs  server.rs
callback-server/tests/: README.md  firewall_test_endpoint.rs  integration_tests.rs
integration-example/: Cargo.toml  trace.txt  trace2.txt
integration-example/src/: conversion.rs  device_selection.rs  event_broker.rs  event_processing.rs  main.rs  subscription.rs
soap-client/: Cargo.toml  README.md
soap-client/src/: error.rs  lib.rs
sonos-api/: CHANGELOG.md  Cargo.toml  README.md  USAGE.md
sonos-api/examples/: README.md  cli_example.rs  declarative_example.rs  integration_test.rs  managed_subscription_example.rs  test_operation.rs  validate_rendering_control.rs
sonos-api/src/: client.rs  controller.rs  error.rs  error_backup.rs  lib.rs  operation.rs  service.rs  subscription.rs  types.rs
sonos-api/src/events/: mod.rs  processor.rs  types.rs  xml_utils.rs
sonos-api/src/operation/: builder.rs  composition.rs  macros.rs  mod.rs
sonos-api/src/operations/: mod.rs
sonos-api/src/operations/av_transport/: get_transport_info.rs  mod.rs  pause.rs  play.rs  stop.rs
sonos-api/src/operations/device_properties/: mod.rs
sonos-api/src/operations/events/: mod.rs  renew.rs  subscribe.rs  unsubscribe.rs
sonos-api/src/operations/group_rendering_control/: mod.rs
sonos-api/src/operations/rendering_control/: get_volume.rs  mod.rs  set_relative_volume.rs  set_volume.rs
sonos-api/src/operations/zone_group_topology/: mod.rs
sonos-api/src/services/: README.md  av_transport.rs  events.rs  mod.rs  rendering_control.rs
sonos-api/src/services/av_transport/: events.rs  mod.rs  operations.rs  state.rs
sonos-api/src/services/group_management/: events.rs  mod.rs  operations.rs  state.rs
sonos-api/src/services/group_rendering_control/: events.rs  (+3 more)
sonos-api/tests/: controller_tests.rs  integration_tests.rs
sonos-discovery/: Cargo.toml  README.md
sonos-discovery/examples/: discover_json.rs
sonos-discovery/src/: device.rs  discovery.rs  error.rs  lib.rs  ssdp.rs
sonos-discovery/tests/: capture_fixtures.rs  discovery_integration.rs  fixture_based_integration.rs  resource_cleanup.rs
sonos-discovery/tests/fixtures/: README.md  minimal_sonos_device.xml  non_sonos_router_device.xml  sonos_amp_device.xml  sonos_one_device.xml  sonos_play1_device.xml  sonos_playbar_device.xml  sonos_roam_device.xml
sonos-discovery/tests/helpers/: mod.rs
sonos-event-manager/: Cargo.toml  README.md
sonos-event-manager/examples/: smart_dashboard.rs
sonos-event-manager/src/: error.rs  iter.rs  lib.rs  manager.rs  worker.rs
sonos-parser/: Cargo.toml  README.md
sonos-parser/src/: error.rs  lib.rs
sonos-parser/src/common/: attributes.rs  didl.rs  mod.rs  xml_decode.rs
sonos-parser/src/services/: mod.rs
sonos-parser/tests/: didl_integration.rs
sonos-sdk/: CHANGELOG.md  Cargo.toml  README.md
sonos-sdk/examples/: basic_usage.rs  basic_usage_sdk.rs  group_lifecycle_test.rs  property_observer.rs  ratatui_sdk_example.rs  sdk_demo.rs  smart_dashboard.rs  watch_grace_period_demo.rs
sonos-sdk/src/: cache.rs  error.rs  group.rs  lib.rs  prelude.rs  speaker.rs  system.rs
sonos-sdk/src/property/: handles.rs  mod.rs
sonos-sdk/tests/: data_freshness.rs  integration_real_speakers.rs  property_tests.proptest-regressions  property_tests.rs  property_validation.rs
sonos-state/: Cargo.toml  MODULAR_PROPERTIES_README.md  PROPERTY_CONNECTOR_GUIDE.md  README.md
sonos-state/examples/: change_iterator_example.rs  debug_topology.rs  full_integration.rs  live_dashboard.rs  minimal_example.rs  ratatui_example.rs  reactive_dashboard.rs
sonos-state/plans/: HIGH_LEVEL_DESIGN-2026-01-13.md  IMPLEMENTATION_CODE-2026-01-13.md  REQUIREMENTS_SPEC-2026-01-13.md  SDK_CLEANUP_PLAN.md  SDK_CLEANUP_PLAN_REVIEW.md  SDK_CLEANUP_UPDATED_GUIDE.md  SONOS_STATE_REFACTOR_PLAN.md  SYNC_INTEGRATION_PLAN.md
sonos-state/src/: change_iterator.rs  decoder.rs  error.rs  event_receiver.rs  event_worker.rs  init.rs  iter.rs  lib.rs  logging.rs  manager.rs  processor.rs  property.rs  property_handle.rs  reactive.rs  speaker.rs  speaker_handle.rs  state.rs  state_manager.rs  store.rs  watch_cache.rs  watcher.rs
sonos-state/src/cache/: mod.rs  snapshot.rs  state_cache.rs
sonos-state/src/decoders/: mod.rs  rendering.rs  topology.rs  transport.rs
sonos-state/src/model/: group.rs  group_id.rs  id_types.rs  mod.rs  playback_state.rs  speaker.rs  speaker_id.rs  speaker_state.rs  state_change.rs  track_info.rs
sonos-stream/: Cargo.toml  README.md  REFACTOR.md
sonos-stream/examples/: README.md  async_realtime.rs  basic_usage.rs  discover_and_stream.rs  filtering_and_batch.rs  firewall_handling.rs  live_demo.rs  multiple_providers.rs  output.txt  simple_event_consumer.rs  typed_event_handling.rs
sonos-stream/src/: broker.rs  builder.rs  callback_server.rs  config.rs  error.rs  event.rs  lib.rs  parser_impls.rs  registry.rs  strategy.rs  subscription.rs  types.rs
sonos-stream/src/broker/: callback_adapter.rs  core.rs  event_processor.rs  mod.rs  renewal_manager.rs  subscription_manager.rs
sonos-stream/src/callback/: mod.rs  router.rs  server.rs
sonos-stream/src/events/: iterator.rs  mod.rs  processor.rs  types.rs
sonos-stream/src/parser/: av_transport.rs  mod.rs  xml_decode.rs
sonos-stream/src/polling/: mod.rs  scheduler.rs  strategies.rs
sonos-stream/src/services/: av_transport_provider.rs  mod.rs
sonos-stream/src/strategy/: av_transport.rs  base.rs  mod.rs
sonos-stream/src/subscription/: event_detector.rs  manager.rs  mod.rs  polling.rs  upnp.rs
sonos-stream/tests/: integration_tests.rs  mock_strategy.rs  test_helpers.rs
state-store/: Cargo.toml  README.md
state-store/examples/: temperature_monitor.rs
state-store/src/: event.rs  iter.rs  lib.rs  property.rs  store.rs
(+122 files in other folders)
