[workspace]
members = [
    "callback-server",
    # "integration-example",  # Temporarily disabled while refactoring UPnP client
    "sonos-discovery",
    "sonos-parser",
    "sonos-stream",        # New implementation
    "sonos-stream-legacy", # Renamed old implementation
    "soap-client",
    "sonos-api",
]
resolver = "2"
