[workspace]
members = [
    "callback-server",
    # "integration-example",  # Temporarily disabled while refactoring UPnP client
    "sonos-discovery",
    "sonos-event-manager",
    "sonos-state",
    "sonos-stream",
    "soap-client",
    "sonos-api",
    "sonos-sdk",
]
resolver = "2"

[workspace.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
