[workspace]
members = [
    "callback-server",
    # "integration-example",  # Temporarily disabled while refactoring UPnP client
    "sonos-discovery",
    "sonos-event-manager",
    "sonos-state",
    "sonos-stream",
    "soap-client",
    "sonos-api",
    "sonos-sdk",
    "state-store",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tatimblin/sonos-sdk"
keywords = ["sonos", "upnp", "audio", "smart-home"]
categories = ["multimedia::audio", "network-programming"]

[workspace.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
