[package]
name = "callback-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
bytes = "1.0"
async-trait = "0.1"
thiserror = "1.0"
reqwest = "0.11"
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"
soap-client = { path = "../soap-client" }

[dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"
