[package]
name = "sonos-sdk-callback-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal HTTP callback server for sonos-sdk UPnP event reception"
readme = "README.md"

[lib]
name = "callback_server"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
bytes = "1.0"
async-trait = "0.1"
thiserror = "1.0"
reqwest = "0.11"
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"
tracing = "0.1"
tracing-subscriber = { workspace = true }

[dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"
