[package]
name = "integration-example"
version = "0.1.0"
edition = "2021"
description = "Integration example demonstrating complete Sonos SDK workflow"
license = "MIT OR Apache-2.0"

[[bin]]
name = "integration-example"
path = "src/main.rs"

[dependencies]
# Sonos SDK crates
sonos-discovery = { path = "../sonos-discovery" }
sonos-stream = { path = "../sonos-stream" }
sonos-api = { path = "../sonos-api" }
sonos-parser = { path = "../sonos-parser" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.18"