[package]
name = "sonos-sdk-soap-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal SOAP client for sonos-sdk UPnP device communication"
readme = "README.md"

[lib]
name = "soap_client"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
xmltree = "0.10"
thiserror = "1.0"
