[package]
name = "sonos-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Type-safe Sonos API for UPnP device control via SOAP"
readme = "README.md"

[dependencies]
soap-client = { package = "sonos-sdk-soap-client", path = "../soap-client", version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
xmltree = "0.10"
sonos-discovery = { package = "sonos-sdk-discovery", path = "../sonos-discovery", version = "0.3.0" }
paste = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }

[dev-dependencies]
rstest = "0.18"
mockito = "1.2"
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }
ureq = "2.9"
