[package]
name = "sonos-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.18"
mockito = "1.2"
