[package]
name = "sonos-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SSDP-based discovery of Sonos devices on local networks"
readme = "README.md"
exclude = ["tests/"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.18"
mockito = "1.2"
serde_json = "1.0"
