[package]
name = "sonos-event-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal event subscription orchestration for sonos-sdk"

[dependencies]
# Local workspace dependencies
sonos-api = { path = "../sonos-api" }
sonos-stream = { path = "../sonos-stream" }
sonos-discovery = { path = "../sonos-discovery" }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }

# Error handling and utilities
thiserror = "1.0"
tracing = "0.1"

# Concurrent data structures for reference counting
dashmap = "5.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sonos-state = { path = "../sonos-state" }
chrono = "0.4"
ctrlc = "3.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "smart_dashboard"
path = "examples/smart_dashboard.rs"
