[package]
name = "sonos-sdk-event-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal event subscription orchestration for sonos-sdk"
readme = "README.md"

[lib]
name = "sonos_event_manager"

[dependencies]
# Local workspace dependencies
sonos-api = { path = "../sonos-api", version = "0.2.1" }
sonos-stream = { package = "sonos-sdk-stream", path = "../sonos-stream", version = "0.2.1" }
sonos-discovery = { package = "sonos-sdk-discovery", path = "../sonos-discovery", version = "0.2.1" }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }

# Error handling and utilities
thiserror = "1.0"
tracing = "0.1"

# Concurrent data structures for reference counting
dashmap = "5.0"

# Non-poisoning locks for Drop safety
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
