[package]
name = "sonos-parser"
version = "0.1.0"
edition = "2021"
description = "XML parsing library for Sonos UPnP service responses and events"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"

[dev-dependencies]
rstest = "0.18"
serde_json = "1.0"