[package]
name = "sonos-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
sonos-state = { path = "../sonos-state" }
sonos-api = { path = "../sonos-api" }
sonos-discovery = { path = "../sonos-discovery" }
sonos-event-manager = { path = "../sonos-event-manager" }
thiserror = "1.0"

[dev-dependencies]
ratatui = "0.26"
crossterm = "0.27"