[package]
name = "sonos-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Sync-first, DOM-like SDK for controlling Sonos speakers via UPnP"
readme = "README.md"

[dependencies]
sonos-state = { path = "../sonos-state" }
sonos-api = { path = "../sonos-api" }
sonos-discovery = { path = "../sonos-discovery" }
sonos-event-manager = { path = "../sonos-event-manager" }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
ratatui = "0.26"
crossterm = "0.27"
proptest = "1.4"
