[package]
name = "sonos-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Sync-first, DOM-like SDK for controlling Sonos speakers via UPnP"
readme = "README.md"

[dependencies]
sonos-state = { package = "sonos-sdk-state", path = "../sonos-state", version = "0.5.2" }
sonos-api = { path = "../sonos-api", version = "0.5.2" }
sonos-discovery = { package = "sonos-sdk-discovery", path = "../sonos-discovery", version = "0.5.2" }
sonos-event-manager = { package = "sonos-sdk-event-manager", path = "../sonos-event-manager", version = "0.5.2" }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
test-support = []

[dev-dependencies]
ratatui = "0.26"
crossterm = "0.27"
proptest = "1.4"
chrono = "0.4"
ctrlc = "3.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "smart_dashboard"
path = "examples/smart_dashboard.rs"

[[example]]
name = "property_observer"
path = "examples/property_observer.rs"
