[package]
name = "sonos-state"
version = "0.1.0"
edition = "2021"
description = "State management for Sonos devices"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

# Workspace dependencies
sonos-api = { path = "../sonos-api" }
sonos-stream = { path = "../sonos-stream" }
sonos-event-manager = { path = "../sonos-event-manager" }
sonos-discovery = { path = "../sonos-discovery" }
state-store = { path = "../state-store" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sonos-discovery = { path = "../sonos-discovery" }
sonos-event-manager = { path = "../sonos-event-manager" }
chrono = "0.4"
ctrlc = "3.4"
# For ratatui example
ratatui = "0.26"
crossterm = "0.27"

