[package]
name = "sonos-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal reactive state management for sonos-sdk"
readme = "README.md"
exclude = ["plans/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

# Workspace dependencies
sonos-api = { path = "../sonos-api" }
sonos-stream = { path = "../sonos-stream" }
sonos-event-manager = { path = "../sonos-event-manager" }
sonos-discovery = { path = "../sonos-discovery" }
state-store = { path = "../state-store" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sonos-discovery = { path = "../sonos-discovery" }
sonos-event-manager = { path = "../sonos-event-manager" }
chrono = "0.4"
ctrlc = "3.4"
proptest = "1.4"
# For ratatui example
ratatui = "0.26"
crossterm = "0.27"
