[package]
name = "sonos-sdk-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal reactive state management for sonos-sdk"
readme = "README.md"
exclude = ["plans/"]

[lib]
name = "sonos_state"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
parking_lot = "0.12"

# Workspace dependencies
sonos-api = { path = "../sonos-api", version = "0.5.2" }
sonos-stream = { package = "sonos-sdk-stream", path = "../sonos-stream", version = "0.5.2" }
sonos-event-manager = { package = "sonos-sdk-event-manager", path = "../sonos-event-manager", version = "0.5.2" }
sonos-discovery = { package = "sonos-sdk-discovery", path = "../sonos-discovery", version = "0.5.2" }
state-store = { package = "sonos-sdk-state-store", path = "../state-store", version = "0.5.2" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sonos-discovery = { package = "sonos-sdk-discovery", path = "../sonos-discovery", version = "0.5.2" }
sonos-event-manager = { package = "sonos-sdk-event-manager", path = "../sonos-event-manager", version = "0.5.2" }
chrono = "0.4"
ctrlc = "3.4"
proptest = "1.4"
# For ratatui example
ratatui = "0.26"
crossterm = "0.27"
