[package]
name = "state-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic, type-safe state management with change detection and blocking iteration"

[dependencies]
# Minimal dependencies - no Sonos-specific crates

[dev-dependencies]
ratatui = "0.29"
crossterm = "0.28"
